@@ -14,7 +14,7 @@ Size=339,180
 Collapsed=0
 
 [Window][Tools]
-Pos=24,-6
+Pos=22,20
 Size=378,349
 Collapsed=0
 
