@@ -1,4 +1,6 @@
 13/3/23:
+-Reflective shader that reflects skybox
+-Skybox optimizations
 -More lighting model fixes/changes, reflected light always less than light received, shadow bias depends on slope
 
 12/3/23:
